change the index file

--- a/index.html
+++ b/index.html
@@ -126,6 +126,53 @@
                 </div>
             </div>
         </div>
+
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-2 col-md-3 wow fadeInUp mb-sm-30" data-wow-delay="0s">
+                    <div class="de_count">
+                        <h3><span class="timer" data-to="4500" data-speed="3000">18+</span></h3>
+                        <h5 class="id-color">Year of Experience</h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-3 wow fadeInUp mb-sm-30" data-wow-delay=".25s">
+                    <div class="de_count">
+                        <h3><span class="timer" data-to="16" data-speed="3000">10,000+</span>k</h3>
+                        <h5 class="id-color">policies Serviced</h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-3 wow fadeInUp mb-sm-30" data-wow-delay=".4s">
+                    <div class="de_count">
+                        <h3><span class="timer" data-to="4" data-speed="3000">250+</span>m</h3>
+                        <h5 class="id-color">MSME's Serviced</h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-3 wow fadeInUp mb-sm-30" data-wow-delay=".6s">
+                    <div class="de_count">
+                        <h3><span class="timer" data-to="52" data-speed="3000">3,000+</span>k</h3>
+                        <h5 class="id-color">Claims Supported</h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-3 wow fadeInUp mb-sm-30" data-wow-delay=".8s">
+                    <div class="de_count">
+                        <h3><span class="timer" data-to="100" data-speed="3000">5,000+</span>+</h3>
+                        <h5 class="id-color">families covered</h5>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-3 wow fadeInUp mb-sm-30" data-wow-delay="1s">
+                    <div class="de_count">
+                        <h3><span class="timer" data-to="2" data-speed="3000">5,000+</span>k</h3>
+                        <h5 class="id-color">Claims Processing Support</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
         <!--  // Contact Modal -->
         <!--==================== NEW INSURANCE ====================-->
         <div class="space bg-image">
